@@ -57,7 +57,7 @@ public class FormatIsoMacro extends BasicMacro {
 
     @Override
     public void verifyArguments(CompilationContext context, Position position, List<Class<?>> args) {
-        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.get(0), Temporal.class)) {
+        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.getFirst(), Temporal.class)) {
             throw new IllegalArgumentException("One parameter of type Temporal is expected.");
         }
     }
