@@ -32,8 +32,8 @@ public class PartMacro extends BasicMacro {
 
     @Override
     public Class<?> getType(List<Node> args) {
-        if (!args.isEmpty() && args.get(0).isConstant() && Class.class.isAssignableFrom(args.get(0).getType())) {
-            return (Class<?>) args.get(0).getConstantValue();
+        if (!args.isEmpty() && args.getFirst().isConstant() && Class.class.isAssignableFrom(args.getFirst().getType())) {
+            return (Class<?>) args.getFirst().getConstantValue();
         }
 
         return super.getType(args);
@@ -46,14 +46,14 @@ public class PartMacro extends BasicMacro {
 
     @Override
     public void verify(CompilationContext context, Position position, List<Node> args) {
-        if (args.size() != 1 || !args.get(0).isConstant() || !Class.class.isAssignableFrom(args.get(0).getType())) {
+        if (args.size() != 1 || !args.getFirst().isConstant() || !Class.class.isAssignableFrom(args.getFirst().getType())) {
             throw new IllegalArgumentException("Expected a single constant class as argument.");
         }
 
-        if (Injector.context().getPart((Class<?>) args.get(0).getConstantValue()) == null) {
+        if (Injector.context().getPart((Class<?>) args.getFirst().getConstantValue()) == null) {
             throw new IllegalArgumentException(Strings.apply(
                     "Unknown part requested: '%s'. Use 'Injector.context().getPart(Class) to fetch an optional part.",
-                    args.get(0).getConstantValue()));
+                    args.getFirst().getConstantValue()));
         }
     }
 
