@@ -34,7 +34,7 @@ public class RenderBlockMacro extends BasicMacro {
 
     @Override
     public void verifyArguments(CompilationContext context, Position pos, List<Class<?>> args) {
-        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.get(0), String.class)) {
+        if (args.size() != 1 || !CompilationContext.isAssignableTo(args.getFirst(), String.class)) {
             throw new IllegalArgumentException("Expected a single String as argument.");
         }
     }
